# cargo-consolidate

./: Cargo.toml  README.md
src/: cli.rs  dependency.rs  main.rs  workspace.rs
