[package]
name = "cargo-consolidate"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = { version = "0.18", features = ["builder"] }
structopt = "0.3"
toml_edit = "0.22"
camino = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
pathdiff = "0.2"

[dev-dependencies]
semver = "1"
cargo_metadata = { version = "0.18", features = ["builder"] }
tempfile = "3"
