[package]
name = "cargo-consolidate"
version = "0.1.0"
edition = "2021"
authors = ["Bastian Gruber <foreach@me.com>"]
description = "A command-line tool to consolidate dependencies in a Rust workspace."
license = "Mozilla Public License Version 2.0"
repository = "https://github.com/gruberb/cargo-consolidate"
homepage = "https://github.com/gruberb/cargo-consolidate"
documentation = "https://docs.rs/cargo-consolidate"
keywords = ["rust", "workspace", "dependencies", "cargo"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = { version = "0.18", features = ["builder"] }
structopt = "0.3"
toml_edit = "0.22"
camino = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
pathdiff = "0.2"

[dev-dependencies]
semver = "1"
cargo_metadata = { version = "0.18", features = ["builder"] }
tempfile = "3"
